# TLEscope

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  TLEScope  data.tle  fetch_tle  installer.nsi  macos_bundle.sh  settings.json
.github/workflows/: build.yml
bundle/Contents/: Info.plist
bundle/Contents/MacOS/: TLEscope
bundle/Contents/Resources/: AppIcon.icns
data/: satellites.txt
include/: TLEscope.h  camera.h  camera_controller.h  conversions.h  point.h  rendering.h  tleparser.h
include/graphics/: Point.h  Renderer.h
include/math/: Conversions.h
include/scene/: BillboardHelper.h  Camera.h  Scene.h
lib/: raygui.h
lib/hamlib/include/: multicast.h  port.h  rig.h  rig_dll.h  rig_state.h  riglist.h  rot_state.h  rotator.h  rotlist.h
lib/raylib_lin/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/raylib_win_arm64/include/: raylib.h  raymath.h  rlgl.h
patches/linux/: raylib-wayland-framebuffer-callback.patch
resources/: data.tle  earth.mtl  resources.rc
scripts/: Dockerfile.crossbuild  build-raylib.sh  crossbuild-all.sh  raylib-build.sh  raylib-crossbuild.Dockerfile  raylib-crossbuild.sh
src/: TLEscope.cpp  astro.c  astro.h  camera.cpp  camera_controller.cpp  config.c  config.h  conversions.cpp  fetch_tle.c  main.c  main.cpp  point.cpp  rendering.cpp  rotator.c  rotator.h  tleparser.cpp  types.h  ui.c  ui.h
src/graphics/: Point.cpp  Renderer.cpp
src/math/: Conversions.cpp
src/scene/: BillboardHelper.cpp  Camera.cpp  Scene.cpp
themes/: README.md
themes/default/: theme.json
themes/girlypop/: theme.json
themes/trans-test/: theme.json
